decompiler/tests/snapshots/test_tool__x86_64_callconv__func000.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func000 0x40110b+3 (file 0x110b)
          40110b: 89 f8                   mov eax,edi
          40110d: c3                      ret

function type: "func000" func (arg0 char <TypeID(778v1)>) char <TypeID(778v1)>
0 warnings.


mil program = 
program  76 instrs
                 0 r12 <- Ancestral(AncestralName("stack_bottom"))
                 1 r2 <- Ancestral(AncestralName("CF"))
                 2 r3 <- Ancestral(AncestralName("PF"))
                 3 r4 <- Ancestral(AncestralName("AF"))
                 4 r5 <- Ancestral(AncestralName("ZF"))
                 5 r6 <- Ancestral(AncestralName("SF"))
                 6 r7 <- Ancestral(AncestralName("TF"))
                 7 r8 <- Ancestral(AncestralName("IF"))
                 8 r9 <- Ancestral(AncestralName("DF"))
                 9 r10 <- Ancestral(AncestralName("OF"))
                10 r11 <- Ancestral(AncestralName("RBP"))
                11 r12 <- Ancestral(AncestralName("RSP"))
                12 r13 <- Ancestral(AncestralName("RIP"))
                13 r14 <- Ancestral(AncestralName("RDI"))
                14 r15 <- Ancestral(AncestralName("RSI"))
                15 r16 <- Ancestral(AncestralName("RAX"))
                16 r17 <- Ancestral(AncestralName("RBX"))
                17 r18 <- Ancestral(AncestralName("RCX"))
                18 r19 <- Ancestral(AncestralName("RDX"))
                19 r20 <- Ancestral(AncestralName("R8"))
                20 r21 <- Ancestral(AncestralName("R9"))
                21 r22 <- Ancestral(AncestralName("R10"))
                22 r23 <- Ancestral(AncestralName("R11"))
                23 r24 <- Ancestral(AncestralName("R12"))
                24 r25 <- Ancestral(AncestralName("R13"))
                25 r26 <- Ancestral(AncestralName("R14"))
                26 r27 <- Ancestral(AncestralName("R15"))
                27 r28 <- Ancestral(AncestralName("ZMM0"))
                28 r29 <- Ancestral(AncestralName("ZMM1"))
                29 r30 <- Ancestral(AncestralName("ZMM2"))
                30 r31 <- Ancestral(AncestralName("ZMM3"))
                31 r32 <- Ancestral(AncestralName("ZMM4"))
                32 r33 <- Ancestral(AncestralName("ZMM5"))
                33 r34 <- Ancestral(AncestralName("ZMM6"))
                34 r35 <- Ancestral(AncestralName("ZMM7"))
                35 r36 <- Ancestral(AncestralName("ZMM8"))
                36 r37 <- Ancestral(AncestralName("ZMM9"))
                37 r38 <- Ancestral(AncestralName("ZMM10"))
                38 r39 <- Ancestral(AncestralName("ZMM11"))
                39 r40 <- Ancestral(AncestralName("ZMM12"))
                40 r41 <- Ancestral(AncestralName("ZMM13"))
                41 r42 <- Ancestral(AncestralName("ZMM14"))
                42 r43 <- Ancestral(AncestralName("ZMM15"))
                43 r44 <- Ancestral(AncestralName("memory"))
                44 r45 <- Undefined
                45 r46 <- Undefined
                46 r47 <- Undefined
                47 r48 <- Undefined
                48 r49 <- Undefined
                49 r50 <- Undefined
                50 r51 <- Undefined
                51 r52 <- Undefined
                52 r53 <- Undefined
                53 r54 <- Undefined
                54 r55 <- Undefined
                55 r56 <- Undefined
                56 r57 <- Undefined
                57 r58 <- Undefined
                58 r59 <- Undefined
                59 r60 <- Undefined
                60 r61 <- Undefined
                61 r62 <- Undefined
                62 r63 <- Undefined
                63 r64 <- Undefined
                64 r65 <- Undefined
                65 r45 <- Ancestral(AncestralName("arg0"))
                66 r46 <- Widen { reg: r45, target_size: 8, sign: false }
                67 r14 <- Get(r46)
0x40110b:
                68 r46 <- Part { src: r14, offset: 0, size: 4 }
                69 r47 <- Part { src: r16, offset: 4, size: 4 }
                70 r16 <- Concat { lo: r46, hi: r47 }
0x40110d:
                71 r45 <- Void
                72 r45 <- Concat { lo: r45, hi: r16 }
                73 r45 <- Part { src: r45, offset: 0, size: 1 }
                74 r47 <- SetReturnValue(r45)
                75 r47 <- Control(Ret)


ssa pre-xform:
ssa program  76 instrs
.B0:    ;;  → Always(Return).
         r15 <- Ancestral(AncestralName("RAX"))
         r65 <- Ancestral(AncestralName("arg0"))
         r66 <- Widen { reg: r65, target_size: 8, sign: false }
         r68 <- Part { src: r66, offset: 0, size: 4 }
         r69 <- Part { src: r15, offset: 4, size: 4 }
         r70 <- Concat { lo: r68, hi: r69 }
         r72 <- Concat { lo: r71, hi: r70 }
         r73 <- Part { src: r72, offset: 0, size: 1 }
         r74 <- SetReturnValue(r73)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r15, r65, r66, r68, r69, r70, r71, r72, r73, r74]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  76 instrs
.B0:    ;;  → Always(Return).
         r65 <- Ancestral(AncestralName("arg0"))
         r74 <- SetReturnValue(r65)



T0: {
  ;
  return pre:arg0
}
